events/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-events
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - github.do.nullkarma.com
      secretName: github-eventsource-tls
  rules:
    - host: github.do.nullkarma.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: github-eventsource-svc
                port:
                  name: example
